--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html>
 <head>
     <title>Working Title</title>
     <style>
         body {
-            background: black url('background.gif') no-repeat center center fixed;
+            background-image: url("/assets/spooky-bg.gif");  /* we'll fix path in step 2 */
             background-size: cover;
             color: rgb(0, 255, 213);
             font-family: Arial, sans-serif;
