--- a/frontend/gameover.html
+++ b/frontend/gameover.html
@@ -5,7 +5,7 @@
   <title>Game Over – Spooky Studying</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="gameover-page">
   <main>
     <h1>Game Over</h1>
 
