--- a/frontend/loading.html
+++ b/frontend/loading.html
@@ -7,7 +7,7 @@
     <style>
         body {
             /* loading.html is in frontend/, assets/ is one level up */
-            background-image: url("../static/spooky-bg.gif");
+            background-image: url("../assets/spooky-bg.gif");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <div id="myItem1" class="ldBar label-center" data-type="fill" data-img="../static/cat-cute.gif"></div>
+    <div id="myItem1" class="ldBar label-center" data-type="fill" data-img="../assets/cat-cute.gif"></div>
     <script>
         // Create the bar
         var bar = new ldBar("#myItem1");
